syntax = "proto3";
package celestia.feeaddress.v1;

import "cosmos/msg/v1/msg.proto";

option go_package = "github.com/celestiaorg/celestia-app/x/feeaddress/types";

// Msg defines the feeaddress Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // ForwardFees is a protocol-injected transaction that forwards accumulated
  // tokens from the fee address to the fee collector as a real transaction fee.
  // This message has no signer - it is injected by the block proposer in
  // PrepareProposal and validated in ProcessProposal.
  rpc ForwardFees(MsgForwardFees) returns (MsgForwardFeesResponse);
}

// MsgForwardFees is a protocol-injected message that forwards accumulated
// tokens from the fee address to the fee collector. This message is special:
// - It has no signer and no fields (unsigned transaction)
// - It is injected by PrepareProposal when fee address has balance
// - The transaction fee equals the fee address balance
// - ProcessProposal enforces that this tx must be present if fee address has balance
// - Validation happens via ProcessProposal checking tx fee == fee address balance
message MsgForwardFees {}

// MsgForwardFeesResponse is the response type for the ForwardFees RPC.
message MsgForwardFeesResponse {}
